[package]
name = "sid-device"
version = "1.0.0"
description = "Network SID Device"
keywords = ["SIDDevice", "C64", "SID", "6581", "8580"]
authors = ["Wilfred Bos"]
license = "GPL-3.0-or-later"
repository = "https://github.com/WilfredC64/sid-device.git"
default-run = "sid-device"
edition = "2021"
rust-version = "1.61"

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
anyhow = "1.0.66"
app_dirs2 = "2.5.4"
atomicring = "1.2.9"
async-broadcast = "0.4.0"
auto-launch = "0.4.0"
cpal = "0.14.2"
crossbeam-channel = "0.5.6"
futures-lite = "1.12.0"
parking_lot = "0.12.1"
rand = "0.8.5"
resid-sys = { path = "resid-sys", version = "=1.0.0" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
single-instance = "0.3.3"
tauri = { version = "1.2.1", features = ["dialog-message", "system-tray"] }
thread-priority = "0.10.0"
typed-builder = "0.11.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true

[package.metadata.winres]
ProductName = "SID-Device"
LegalCopyright = "Copyright © 2022 Wilfred Bos"
