[package]
name = "sid-device"
version = "1.0.2"
description = "Network SID Device"
keywords = ["siddevice", "c64", "sid", "sid-6581", "sid-8580"]
authors = ["Wilfred Bos"]
license = "GPL-3.0-or-later"
repository = "https://github.com/WilfredC64/sid-device.git"
default-run = "sid-device"
edition = "2021"
rust-version = "1.80"

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
anyhow = "1.0.95"
app_dirs2 = "2.5.5"
async-broadcast = "0.7.2"
atomicring = "1.2.9"
cpal = "0.15.3"
crossbeam-channel = "0.5.14"
futures-lite = "2.5.0"
hostname = "0.4.0"
os_info = "3.9.2"
parking_lot = "0.12.3"
rand = "0.8.5"
resid-sys = { path = "resid-sys", version = "=1.0.0" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.2.2", features = [ "tray-icon"] }
tauri-plugin-dialog = "2.2.0"
thread-priority = "1.2.0"
typed-builder = "0.20.0"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-single-instance = "2.2.1"
tauri-plugin-autostart = "2.2.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[profile.dev.package.resid-sys]
opt-level = 3

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
